--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -1,1 +1,10 @@
-<p>navbar works!</p>
+
+  <nav class="navbar">
+    <div class="name"><img class="plus" src="assets/images/plus_image.png"><b>Central <span color="1CB5BD"> Health Log</span></b></div>
+    <div>
+      <div class="navbar-nav">
+        <a href="https://www.facebook.com/login/"><app-button [text]='btntext' ></app-button></a>
+       
+      </div>
+    </div>
+  </nav>
