void-button component designed

--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -1,9 +1,14 @@
+<nav class="navbar">
+  <div class="name">
+    <img class="plus" src="assets/images/plus_image.png" /><b
+      >Central <span> Health Log</span></b
+    >
+  </div>
+  <div>
+    <div class="navbar-nav">
+      <a href="#"><app-button [text]="btntext"></app-button></a>
+      <a href="#"><app-void-button [text]="'Add new'" [btnClass]="'btn-primary'" [btnConfig]="textBtnConfig"></app-void-button></a>
 
-  <nav class="navbar">
-    <div class="name"><img class="plus" src="assets/images/plus_image.png"><b>Central <span> Health Log</span></b></div>
-    <div>
-      <div class="navbar-nav">
-        <a href="#"><app-button [text]='btntext' ></app-button></a>
-      </div>
     </div>
-  </nav>
+  </div>
+</nav>
