--- a/CHL-Frontend/src/app/common/navbar/navbar.component.scss
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.scss
@@ -1,16 +1,14 @@
+.navbar {
+  background-color: #fff;
+  height: 70px;
+  font-family: Montserrat;
+  font-size: 35px;
 
-.navbar{
-    background-color: #fff;
-    height: 70px;
-    font-family: Montserrat;
-    font-size: 35px;
-    span{
-        color: #1CB5BD;
-    }
-    
-        .plus{
-            height: 40px;
-       
-        }
-    }    
-    
+  span {
+    color: #1cb5bd;
+  }
+
+  .plus {
+    height: 40px;
+  }
+}
