updated button component

--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -1,1 +1,1 @@
-<button type="button" class="btn"><b>{{text}}</b></button>
+<button class="btn" [ngStyle]="btnConfig.styles"><b>{{text}}</b></button>
