--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -6,9 +6,9 @@
   </div>
   <div>
     <div class="navbar-nav">
-      <a href="#"><app-button [text]="btntext"></app-button></a>
-      <a href="#"><app-void-button [text]="'Add new'" [btnClass]="'btn-primary'" [btnConfig]="textBtnConfig"></app-void-button></a>
-
+      <!--<a href="#"><app-button [text]="btntext"></app-button></a>-->
+      <a href="#"><app-button [text]="btntext" [btnConfig]="textBtnConfig"></app-button></a>
+      <!--<a href="#"><app-void-button [btnConfig]="textBtnConfig" [text]="textBtnConfig.text"></app-void-button></a>-->
     </div>
   </div>
 </nav>
