--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -9,6 +9,7 @@
       <!--<a href="#"><app-button [text]="btntext"></app-button></a>-->
       <a href="#"><app-button [text]="btntext" [btnConfig]="textBtnConfig"></app-button></a>
       <!--<a href="#"><app-void-button [btnConfig]="textBtnConfig" [text]="textBtnConfig.text"></app-void-button></a>-->
+      <!--<app-dropdown [states]="stateList" [dropConfig]="textdropConfig"></app-dropdown>-->
     </div>
   </div>
 </nav>
