--- a/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.scss
+++ b/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.scss
@@ -1,5 +1,4 @@
 .main-container {
-  
   .container-body {
     background: url("../../../assets/images/doc-reg-bg.png") no-repeat center
       center fixed;
@@ -15,12 +14,9 @@
       border-radius: 10px;
       position: relative;
       // opacity: 0.4;
-      background-color: rgba(233, 247, 248, 0.5)
-
+      background-color: rgba(233, 247, 248, 0.5);
     }
-    
   }
-
 }
 
 input {
