button component output added

--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="btn" [ngStyle]="btnConfig.styles"><b>{{text}}</b></button>
+<button type="submit" class="btn" [ngStyle]="btnConfig.styles" (click)="emitEvent()"><b>{{text}}</b></button>
