--- a/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
+++ b/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
@@ -69,6 +69,7 @@
             <app-button
               [text]="btntext"
               [btnConfig]="textBtnConfig"
+              (onClick)="submit($event)"
             ></app-button>
           </div>
         </form>
