doc reg form now sends out the input responses

--- a/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
+++ b/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
@@ -7,22 +7,42 @@
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Doctor name:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.name"
+                type="text"
+                class="form-control"
+                name="name"
+              />
             </div>
             <label class="col-sm-2 col-form-label">Aadhaar no:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.aadhaarNo"
+                type="text"
+                class="form-control"
+                name="aadhaarNo"
+              />
             </div>
           </div>
           <br />
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Registration no:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.registrationNo"
+                type="text"
+                class="form-control"
+                name="registrationNo"
+              />
             </div>
             <label class="col-sm-2 col-form-label">Year of Registration:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.yearOfRegistration"
+                type="text"
+                class="form-control"
+                name="yearOfRegistration"
+              />
             </div>
           </div>
           <br />
@@ -39,29 +59,54 @@
             </div>
             <label class="col-sm-2 col-form-label">Qualification:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.qualification"
+                type="text"
+                class="form-control"
+                name="qualification"
+              />
             </div>
           </div>
           <br />
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Email:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.email"
+                type="text"
+                class="form-control"
+                name="email"
+              />
             </div>
             <label class="col-sm-2 col-form-label">Contact no:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.contact"
+                type="text"
+                class="form-control"
+                name="contact"
+              />
             </div>
           </div>
           <br />
           <div class="form-group row">
             <label class="col-sm-2 col-form-label">Username:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.username"
+                type="text"
+                class="form-control"
+                name="username"
+              />
             </div>
             <label class="col-sm-2 col-form-label">Password:</label>
             <div class="col-sm-4">
-              <input type="text" class="form-control" />
+              <input
+                [(ngModel)]="doctor.password"
+                type="text"
+                class="form-control"
+                name="password"
+              />
             </div>
           </div>
           <br />
