--- a/CHL-Frontend/src/styles.scss
+++ b/CHL-Frontend/src/styles.scss
@@ -1,4 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-.ng-invalid:not(form){
+.form-control.ng-touched.ng-invalid:not(form){
     border: 2px solid red;
 }
