--- a/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
+++ b/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
@@ -15,6 +15,7 @@
       <div class="alert alert-danger" *ngIf="aadhaarNo.touched && aadhaarNo.invalid">
         Invalid aadhaar no<br>
         1. Required <br>
+        2. E.g: 8232 1221 0734
         2. Length = 12
       </div>
     </div>
@@ -100,12 +101,11 @@
             <div class="col-sm-4">
               <input
                 [(ngModel)]="doctor.aadhaarNo"
-                type="number"
+                type="text"
                 class="form-control"
                 name="aadhaarNo"
                 required="required"
-                min="100000000000"
-                max="999999999999"
+                pattern="^[2-9]{1}[0-9]{3}\\s[0-9]{4}\\s[0-9]{4}$"
                 #aadhaarNo="ngModel"
               />
             </div>
@@ -226,11 +226,12 @@
             <app-button
               [text]="btntext"
               [btnConfig]="textBtnConfig"
-              
+
             ></app-button>
           </div>
         </form>
       </div>
     </div>
+  </div>
   </div>
 </div>
