--- a/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
+++ b/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
@@ -105,7 +105,7 @@
                 class="form-control"
                 name="aadhaarNo"
                 required="required"
-                pattern="^[2-9]{1}[0-9]{3}\\s[0-9]{4}\\s[0-9]{4}$"
+                pattern="^\d{4}\s\d{4}\s\d{4}$"
                 #aadhaarNo="ngModel"
               />
             </div>
@@ -232,6 +232,5 @@
         </form>
       </div>
     </div>
-  </div>
   </div>
 </div>
