1. updated Doctor.ts file to contain every field as per table 2. added DoctorRepository.java, DoctorService.java 3. post request now saves data into h2 database

--- a/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
+++ b/CHL-Frontend/src/app/components/doctor-registration/doctor-registration.component.html
@@ -87,7 +87,7 @@
             <label class="col-sm-2 col-form-label">Doctor name:</label>
             <div class="col-sm-4">
               <input
-                [(ngModel)]="doctor.name"
+                [(ngModel)]="doctor.doctorName"
                 type="text"
                 class="form-control"
                 name="name"
@@ -128,7 +128,7 @@
             <label class="col-sm-2 col-form-label">Year of Registration:</label>
             <div class="col-sm-4">
               <input
-                [(ngModel)]="doctor.yearOfRegistration"
+                [(ngModel)]="doctor.yearOfReg"
                 type="number"
                 class="form-control"
                 name="yearOfRegistration"
