--- a/CHL-Frontend/src/app/common/navbar/navbar.component.scss
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 .navbar {
   background-color: #fff;
-  height: 70px;
-  font-family: Montserrat;
+  height: 7%;
+  font-family: 'Montserrat';
   font-size: 35px;
 
   span {
