--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -1,1 +1,2 @@
-<app-navbar [button]="false" [name]="'Login'"></app-navbar>
+<!-- <app-navbar [button]="false" [name]="'dR AKANSHA FKNKSLENDFLK'"></app-navbar> -->
+<router-outlet></router-outlet>
