added routing in navbar

--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -4,7 +4,7 @@
 
 <!-- Text Button -->
 <ng-template #text>
-  <button type="button" [ngStyle]="btnConfig.styles" (click)="onTextBtnClick($event)">
+  <button type="button" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
    <b> {{btntext}}</b>
   </button>
 </ng-template>
