--- a/CHL-Frontend/src/app/common/checkbox/checkbox.component.html
+++ b/CHL-Frontend/src/app/common/checkbox/checkbox.component.html
@@ -1,1 +1,17 @@
-<p>checkbox works!</p>
+<!-- <form action="">
+  <div *ngFor="let item of checkList">
+    <input type="checkbox" name="vehicle1" value={{item}} />
+    <label>{{item}}</label><br />
+  </div>
+  <input type="submit" value="Submit" />
+</form> -->
+
+<form [formGroup]="form" (ngSubmit)="submit()">
+    <label formArrayName="orders" *ngFor="let order of ordersFormArray.controls; let i = index">
+        <input type="checkbox" [formControlName]="i" />
+        {{ webData[i].name }}
+    </label>
+
+    <br />
+    <button class="btn btn-success">submit</button>
+</form>
