--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -6,11 +6,18 @@
   </div>
   <div>
     <div class="navbar-nav">
-
-          <app-button *ngIf="btn" [btntext]="Text" [btnConfig]="textBtnConfig"
-                      (textBtnClickEmt)="onClickEventReceived($event)"></app-button>
-          <app-button  *ngIf="btn==false" [droptxt]="[name,'Logout']" [btnConfig]="imgBtnConfig"
-                      (imgBtnClickEmt)="onClickEventReceived($event)"></app-button>
+      <app-button
+        *ngIf="btn"
+        [btntext]="Text"
+        [btnConfig]="textBtnConfig"
+        (textBtnClickEmt)="onClickEventReceived($event)"
+      ></app-button>
+      <app-button
+        *ngIf="btn == false"
+        [droptxt]="[name, 'Logout']"
+        [btnConfig]="imgBtnConfig"
+        (imgBtnClickEmt)="onClickEventReceived($event)"
+      ></app-button>
     </div>
   </div>
 </nav>
