full front end removed

--- a/CHL-Frontend/src/app/common/dropdown/dropdown.component.html
+++ b/CHL-Frontend/src/app/common/dropdown/dropdown.component.html
@@ -1,5 +1,1 @@
-<select [ngStyle]="dropConfig.styles" #state (change)="emitEvent(state.value)">
-    <option *ngFor="let state of states">
-        {{state}}
-    </option>
-</select>
+<p>dropdown works!</p>
