--- a/CHL-Frontend/src/app/common/navbar/navbar.component.html
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.html
@@ -1,17 +1,1 @@
-<nav class="navbar">
-  <div class="name">
-    <img class="plus" src="assets/images/plus_image.png" /><b
-      >Central <span> Health Log</span></b
-    >
-  </div>
-  <div>
-    <div class="navbar-nav">
-      <!--<a href="#"><app-button [text]="btntext"></app-button></a>-->
-      <a href="#"
-        ><app-button [text]="btntext" [btnConfig]="textBtnConfig"></app-button
-      ></a>
-      <!--<a href="#"><app-void-button [btnConfig]="textBtnConfig" [text]="textBtnConfig.text"></app-void-button></a>-->
-      <!-- <app-dropdown [states]="stateList" [dropConfig]="textdropConfig"></app-dropdown> -->
-    </div>
-  </div>
-</nav>
+<p>navbar works!</p>
