checkbox now works with variable check list input

--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!-- <router-outlet></router-outlet> -->
-<app-checkbox></app-checkbox>
+<router-outlet></router-outlet>
+<!-- <app-checkbox [checkList]="checkboxInputs"></app-checkbox> -->
