--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -9,7 +9,7 @@
 
 #sub-container{
     height:93%;
-    background-color:#DAFDFF;
+    background-color:#F5FEFF;
     display: flex;
     flex-direction:row;
     justify-content: space-evenly;
