--- a/CHL-Frontend/src/app/components/login-page/login/login.component.html
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.html
@@ -11,9 +11,10 @@
                     <div id ="login-heading">LOGIN</div>
                     <span>Select the User Type</span>
                     <div id="buttons">
-                        <app-button  class="sub-btn" [text]="btntext" [btnConfig]="textBtnConfig"></app-button>
-                        <app-button  class="sub-btn" [text]="btntext" [btnConfig]="textBtnConfig"></app-button>
-                        <app-button  class="sub-btn" [text]="btntext" [btnConfig]="textBtnConfig"></app-button>
+                        <app-button  [btntext]="'Patient'" [btnConfig]="textBtnConfig"></app-button>
+                        <app-button  [btntext]="'Doctor'" [btnConfig]="textBtnConfig"></app-button>
+                        <app-button  [btntext]="'Admin'" [btnConfig]="textBtnConfig"></app-button>
+                        
                     </div>
                     <div class="form-group">
                         <label for="username">Username</label>
@@ -31,7 +32,7 @@
                             class="form-control"
                             placeholder="Password">
                     </div>
-                    <div id="login-btn"><app-button  class="sub-btn" [text]="btntext" [btnConfig]="textBtnConfig"></app-button></div>
+                    <app-button  [btntext]="'LOGIN'" [btnConfig]="textBtnConfig"></app-button>
                 </form> 
             <span>New User? Register</span>
         </div> 
