--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
@@ -3,8 +3,9 @@
         <div id="text1">Back to Dashboard</div>
         <div id="text2">Update Details</div>
         <div id="container">
+            <form>
             <div id="container1">
-                <form>
+                <div id="sub-container1">
                     <div class="form-group">
                         <label for="first name">First name</label>
                         <input 
@@ -29,10 +30,8 @@
                             class="form-control"
                             placeholder="Gender">
                     </div>
-                </form> 
-            </div>
-            <div id="container2">
-                <form>
+                </div>
+                <div id="sub-container2">
                     <div class="form-group">
                         <label for="Last name">Last name</label>
                         <input 
@@ -49,24 +48,30 @@
                             class="form-control"
                             placeholder="Contact No">
                     </div>
-                </form> 
-            </div>
-            <div>
-                <form>
                     <div class="form-group">
-                        <label for="address">Address</label>
+                        <label for="contactno">Age</label>
                         <input 
-                            id="address" 
+                            id="age" 
                             type="text" 
                             class="form-control"
-                            placeholder="Address">
+                            placeholder="Age">
                     </div>
-                </form>
+                </div>
             </div>
-            <div id="update-btn">
+            <div id="container2">
+                <div class="form-group">
+                    <label for="address">Address</label>
+                    <input 
+                        id="address" 
+                        type="text" 
+                        class="form-control"
+                        placeholder="Address">
+                </div>
+            </div>
+            <div id="conatiner3">
                  <!-- <div id="login-btn"><app-button  class="sub-btn" [text]="btntext" [btnConfig]="textBtnConfig"></app-button></div> -->
             </div>
+            </form>
         </div>
-    </div>
-   
-</div>
+   </div>
+</div>  
