--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
@@ -1,5 +1,5 @@
 #main-container{
-    background-color: #DAFDFF;
+    background-color: #F5FEFF;;
 }
 #sub-container{
     background-color: #ffff;
@@ -11,4 +11,20 @@
     height: 600px;
     justify-content: center;
     align-items: center;
+}
+
+#container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#container1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
 }
