now styling can be added to checkbox component

--- a/CHL-Frontend/src/app/common/checkbox/checkbox.component.html
+++ b/CHL-Frontend/src/app/common/checkbox/checkbox.component.html
@@ -1,6 +1,6 @@
 <form action="">
   <div *ngFor="let item of checkList" (change)="liveCheck(check.value)">
-    <input #check type="checkbox" name="vehicle1" value={{item}}/>
+    <input [ngStyle]="checkboxConfig.styles" #check type="checkbox" name="vehicle1" value={{item}}/>
     <label>{{item}}</label><br />
   </div>
   <input type="submit" value="Submit" />
