--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
@@ -9,18 +9,21 @@
  #parent-container{
     background-color: #F5FEFF;
     height:93%;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+    padding-right: 50px;
  }
 
 #sub-container{
     background-color: #ffff;
     box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
     border-radius: 6px;
-    display: flex;
-    flex-direction: row;
-    width:1000px; 
-    height: 850px;
-    justify-content: center;
-    align-items: center;
+    
+    
+    width:85%; 
+    height: 90%;
 }
 
 #container{
