--- a/CHL-Frontend/src/app/common/checkbox/checkbox.component.html
+++ b/CHL-Frontend/src/app/common/checkbox/checkbox.component.html
@@ -1,7 +1,11 @@
-<form action="">
-  <div *ngFor="let item of checkList" (change)="liveCheck(check.value)">
-    <input [ngStyle]="checkboxConfig.styles" #check type="checkbox" name="vehicle1" value={{item}}/>
-    <label>{{item}}</label><br />
-  </div>
-  <input type="submit" value="Submit" />
-</form>
+<div *ngFor="let item of checkList" (change)="liveCheck(check.value)">
+  <input
+    [ngStyle]="checkboxConfig.styles"
+    #check
+    type="checkbox"
+    name="checkbox"
+    value="{{ item }}"
+  />
+  <label>{{ item }}</label
+  ><br />
+</div>
