--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
@@ -11,17 +11,14 @@
     height:93%;
     display: flex;
     flex-direction: row;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
-    padding-right: 50px;
  }
 
 #sub-container{
     background-color: #ffff;
     box-shadow: -1px 2px 5px 4px rgba(115,115,115,0.29);
     border-radius: 6px;
-    
-    
     width:85%; 
     height: 90%;
 }
@@ -31,13 +28,37 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 
 }
 
 #container1{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+   
+    
+
+}
+#sub-container1,#sub-container2{
+    width: 40%;
+    padding: 50px;
+
+}
+
+
+.form-group{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
 
+}
+form{
+    width: 100%;
+}
+input{
+    width: 250px;
 }
