--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -1,19 +1,35 @@
 
-<ng-container *ngTemplateOutlet="btnConfig['text'] ? text : image">
-</ng-container>
-
-<!-- Text Button -->
-<ng-template #text>
-  <button type="button" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
+  <button type="button" class="btn btn-outline-info" [ngStyle]="btnConfig.styles" (click)="onClickBtn($event)">
    <b> {{btntext}}</b>
   </button>
-</ng-template>
 
-<!-- Profile Section -->
-<ng-template #image>
-  <div>
-    <img class="image"  src="../../../assets/images/Person.png" 
-      (click)="onImgBtnClick($event)">
-    <app-dropdown (value)="saveValue($event)" class="dropdown" [states]="droptxt" [dropConfig]="textDropConfig"></app-dropdown>
-  </div>
-</ng-template>
+
+<!-- How to use -->
+<!-- <app-button [btntext]="'Register'" [btnConfig]="textBtnConfig" ></app-button> -->
+
+<!-- give styling like this in component.ts file -->
+
+<!-- textBtnConfig = {
+  styles: {
+    DO NOT CHANGE THIS STYLING
+
+    fontFamily: 'Montserrat',
+    display: 'flex',
+    flexDirection: 'row',
+    justifyContent: 'center',
+    alignItems: 'center',
+    padding: '8px 54px',
+    gap: '10px',
+    
+    U CAN CHANGE THIS ACCORDING TO YOUR REQUIREMENT
+
+    width: '100%',
+    backgroundColor: '#fff',
+    color: '#1CB5BD',
+    fontSize: '28px',
+    borderColor: '#1CB5BD',
+    height: '40px',
+    border: '1px solid #1CB5BD',
+    borderRadius: '4px',  
+  }
+}; -->
