--- a/CHL-Frontend/src/app/common/navbar/navbar.component.scss
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.scss
@@ -3,6 +3,7 @@
   height: 7%;
   font-family: 'Montserrat';
   font-size: 35px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   span {
     color: #1cb5bd;
@@ -11,4 +12,17 @@
   .plus {
     height: 40px;
   }
+
+
+  #Profile{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+}
+.image{
+    height: 100%;
+    
+}
 }
