--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.html
@@ -2,7 +2,7 @@
     <div id="nav-bar" ><app-navbar [btntext]="'Register'"></app-navbar></div>
     <div id="parent-container">
         <div id="sub-container">
-            <div id="text1">Back to Dashboard</div>
+            <div id="text1"><a href="#" ></a>Back to Dashboard</div>
             <div id="text2">Update Details</div>
             <div id="container">
                 <form>
@@ -14,7 +14,7 @@
                                 id="first name" 
                                 type="text" 
                                 class="form-control"
-                                placeholder="First name">
+                                >
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
@@ -22,7 +22,7 @@
                                 id="email" 
                                 type="text" 
                                 class="form-control"
-                                placeholder="Email">
+                                >
                         </div>
                         <div class="form-group">
                             <label for="gender">Gender</label>
@@ -30,7 +30,7 @@
                                 id="gender" 
                                 type="text" 
                                 class="form-control"
-                                placeholder="Gender">
+                                >
                         </div>
                     </div>
                     <div id="sub-container2">
@@ -40,7 +40,7 @@
                                 id="last name" 
                                 type="text" 
                                 class="form-control"
-                                placeholder="Last name">
+                                >
                         </div>
                         <div class="form-group">
                             <label for="contactno">Contact No</label>
@@ -48,7 +48,7 @@
                                 id="contactno" 
                                 type="text" 
                                 class="form-control"
-                                placeholder="Contact No">
+                               >
                         </div>
                         <div class="form-group">
                             <label for="contactno">Age</label>
@@ -56,7 +56,7 @@
                                 id="age" 
                                 type="text" 
                                 class="form-control"
-                                placeholder="Age">
+                               >
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                             id="address" 
                             type="text" 
                             class="form-control"
-                            placeholder="Address">
+                            >
                     </div>
                 </div>
                 <div id="conatiner3">
