--- a/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
+++ b/CHL-Frontend/src/app/components/patient/personal-details/personal-details.component.scss
@@ -6,6 +6,7 @@
 #nav-bar{
     height:7%;
 }
+
  #parent-container{
     background-color: #F5FEFF;
     height:93%;
@@ -30,6 +31,19 @@
     align-items: center;
     // width: 100%;
     // height: 100%;
+
+}
+
+#container3{
+    display: flex;
+    flex-direction: row-reverse;
+    // justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    // border: 2px solid black;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-top: 10px;
 
 }
 
