--- a/CHL-Frontend/src/app/app.component.html
+++ b/CHL-Frontend/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<div>
+<app-navbar [button]="true" [btntext]="'Login'"></app-navbar>
+<app-sidebar></app-sidebar>
+</div>
