--- a/CHL-Frontend/src/app/components/login-page/login/login.component.scss
+++ b/CHL-Frontend/src/app/components/login-page/login/login.component.scss
@@ -58,3 +58,26 @@
 #login-btn{
     text-align: center;
 }
+
+#form-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    // width: 100%;
+}
+
+// .form-group{
+//     width: 40%;
+// //    border: 2px solid black;
+// //    padding-top: 50px;
+// //    padding-left: 50px;
+// padding: 0px 50px ;
+// }
+
+// #buttons{
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+
+// }
