input component now accepts input from parent and returns output to parent

--- a/CHL-Frontend/src/app/common/input/input.component.html
+++ b/CHL-Frontend/src/app/common/input/input.component.html
@@ -1,6 +1,7 @@
 <div>
   <label>{{ inputLabel }}</label>
   <input
+    (change)="emitChanges()"
     [(ngModel)]="userInput"
     #inputField="ngModel"
     id="ip"
