--- a/CHL-Frontend/src/app/common/input/input.component.html
+++ b/CHL-Frontend/src/app/common/input/input.component.html
@@ -1,27 +1,27 @@
-<div>
+<div class="ipField">
   <label>{{ inputLabel }}</label>
-  <input
-    (change)="emitChanges()"
-    [(ngModel)]="userInput"
-    #inputField="ngModel"
-    [type]="inputType"
-    [pattern]="validations.pattern"
-    [minlength]="validations.minLength"
-    [maxlength]="validations.maxLength"
-    [required]="validations.required"
-  />
-  <div *ngIf="inputField.invalid && (inputField.dirty || inputField.touched)" class="alert">
-    <div *ngIf="inputField.errors?.['required']">
-        Required.
-    </div>
-    <div *ngIf="inputField.errors?.['pattern']">
-        Invalid input.
-    </div>
-    <div *ngIf="inputField.errors?.['minlength']">
-        {{ inputLabel }} must be at least {{validations.minLength}} characters long.
-    </div>
-    <div *ngIf="inputField.errors?.['maxLength']">
-        {{ inputLabel }} must not be more than {{validations.minLength}} characters long.
+  <div>
+    <input
+      (change)="emitChanges()"
+      [(ngModel)]="userInput"
+      #inputField="ngModel"
+      [type]="inputType"
+      [pattern]="validations.pattern"
+      [minlength]="validations.minLength"
+      [maxlength]="validations.maxLength"
+      [required]="validations.required"
+    />
+    <div class="errors" *ngIf="inputField.invalid && (inputField.dirty || inputField.touched)">
+      <div *ngIf="inputField.errors?.['required']">Required.</div>
+      <div *ngIf="inputField.errors?.['pattern']">Invalid input.</div>
+      <div *ngIf="inputField.errors?.['minlength']">
+        {{ inputLabel }} must be at least {{ validations.minLength }} characters
+        long.
+      </div>
+      <div *ngIf="inputField.errors?.['maxLength']">
+        {{ inputLabel }} must not be more than
+        {{ validations.minLength }} characters long.
+      </div>
     </div>
   </div>
 </div>
