--- a/CHL-Frontend/src/app/common/input/input.component.scss
+++ b/CHL-Frontend/src/app/common/input/input.component.scss
@@ -1,3 +1,18 @@
+.ipField{
+  display: inline-flex;
+  justify-content: space-between;
+  width: 100%;
+
+  .errors{
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: #EE0004;
+  }
+}
+
 input {
   box-sizing: border-box;
   background: #ffffff;
@@ -14,8 +29,8 @@ input:focus{
   outline: none;
 }
 
-input:invalid{
-  border: 1px solid red;
+input.ng-touched.ng-invalid{
+  border: 1px solid #EE0004;
 }
 
 label{
