button css now moved to button.component.scss file. now to chenge the button only two parameters need to be passed

--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -10,26 +10,10 @@
 <!-- give styling like this in component.ts file -->
 
 <!-- textBtnConfig = {
-  styles: {
-    DO NOT CHANGE THIS STYLING
+  textBtnConfig = {
+    styles: {
+       background: '#fff',
+       color: '#1CB5BD'
 
-    fontFamily: 'Montserrat',
-    display: 'flex',
-    flexDirection: 'row',
-    justifyContent: 'center',
-    alignItems: 'center',
-    padding: '8px 54px',
-    gap: '10px',
-    
-    U CAN CHANGE THIS ACCORDING TO YOUR REQUIREMENT
-
-    width: '100%',
-    backgroundColor: '#fff',
-    color: '#1CB5BD',
-    fontSize: '28px',
-    borderColor: '#1CB5BD',
-    height: '40px',
-    border: '1px solid #1CB5BD',
-    borderRadius: '4px',  
-  }
+    }
 }; -->
