button component now uses three variables color, background, height to switch between buttons

--- a/CHL-Frontend/src/app/common/button/button.component.html
+++ b/CHL-Frontend/src/app/common/button/button.component.html
@@ -13,7 +13,8 @@
   textBtnConfig = {
     styles: {
        background: '#fff',
-       color: '#1CB5BD'
+       color: '#1CB5BD',
+       height: '40px'
 
     }
 }; -->
